--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Calculatoor",
+  "name": "calculator",
   "homepage": "https://chistoperez.github.io/React-Calculator",
   "version": "0.1.0",
   "private": true,
